--- a/telegram/be/package.json
+++ b/telegram/be/package.json
@@ -7,8 +7,10 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
+    "socket.io": "^4.5.3",
     "xss-clean": "^0.1.1"
   },
   "name": "be",
